# leveraged-meme-launchpad

./: .gitlab-ci.yml  Anchor.toml  BUILD_LOCALLY.md  BUILD_STATUS.md  DEVNET_TESTING.md  DRIFT_INTEGRATION.md  Dockerfile  Dockerfile.minimal  FIXES_NEEDED.md  Makefile  README.md  SOLUTION.md  build.sh  frontend-demo.html  frontend-pumpfun-style.html  frontend-simple.html  setup-github.sh
.github/workflows/: build.yml
app/: index.html  package.json  tailwind.config.js
app/src/: App.tsx  index.css  main.tsx
app/src/components/: Navbar.tsx
app/src/hooks/: useProgram.ts
app/src/pages/: Home.tsx  Launch.tsx  Portfolio.tsx  Token.tsx
app/src/types/: program.ts
programs/leveraged_meme/: Cargo.lock.fixed  Cargo.toml
programs/leveraged_meme/src/: constants.rs  drift_integration.rs  errors.rs  idl.rs  lib.rs  oracle_integration.rs  state.rs
programs/leveraged_meme/src/instructions/: buy.rs  buy_with_drift.rs  graduate.rs  initialize_token.rs  mod.rs  sell.rs  set_pause.rs  sync_perp_position.rs
scripts/: deploy.sh
tests/: leveraged-meme.ts
