[package]
name = "leveraged_meme"
version = "0.1.0"
description = "Leveraged Meme Token Launchpad - Pump.fun with perp backing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "leveraged_meme"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "=0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "=0.29.0", features = ["metadata"] }

# Pin all dependencies to pre-edition2024 versions
ahash = "=0.7.8"
block-buffer = "=0.10.4"
crypto-common = "=0.1.6"
digest = "=0.10.7"
hashbrown = "=0.12.3"
indexmap = "=1.9.3"

[dev-dependencies]
anchor-client = "=0.29.0"
